Added rest call to elevation api

--- a/CamFoV/Info.plist
+++ b/CamFoV/Info.plist
@@ -63,6 +63,11 @@
 	</array>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>The location is needed to show your position on the map</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>The location is needed to show your position on the map</string>
 </dict>
