Views will now be stored on iCloud documents folder

--- a/CamFoV/Info.plist
+++ b/CamFoV/Info.plist
@@ -31,6 +31,18 @@
 	<string>Your location is needed to show it on the map</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Your location is needed to show it on the map</string>
+	<key>NSUbiquitousContainers</key>
+	<dict>
+		<key>iCloud.$(PRODUCT_BUNDLE_IDENTIFIER)</key>
+		<dict>
+			<key>NSUbiquitousContainerIsDocumentScopePublic</key>
+			<true/>
+			<key>NSUbiquitousContainerName</key>
+			<string>iCloud.eu.hansolo.PhotoSpotter</string>
+			<key>NSUbiquitousContainerSupportedFolderLevels</key>
+			<string>Any</string>
+		</dict>
+	</dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
